--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+*,
+::before,
+::after {
+    border-radius: 0;
+    box-sizing   : border-box;
+    margin       : 0;
+    padding      : 0;
+}
+
+html,
+body {
+    height: 100%;
+    width : 100%;
+}
+
+body {
+    font-family: Montserrat, Helvetica, Arial, Lucida, sans-serif;
+}
