basic component setup

--- a/src/app/record-table/record-table.component.html
+++ b/src/app/record-table/record-table.component.html
@@ -1,8 +1,12 @@
 <table>
     <thead>
-
+        <tr>
+            <th *ngFor="let key of keys">{{key.value}}</th>
+        </tr>
     </thead>
     <tbody>
-
+        <tr *ngFor="let record of records">
+            <td *ngFor="let key of keys">{{record[key.value]}}</td>
+        </tr>
     </tbody>
 </table>
