--- a/src/app/record-table-view-editor/record-table-view-editor.component.css
+++ b/src/app/record-table-view-editor/record-table-view-editor.component.css
@@ -1,3 +1,16 @@
-table {
-    margin: 0 auto;
+.column-toggles {
+    background-color: white;
+    bottom          : 0;
+    box-shadow      : 0 0 .2em .2em rgb(0 0 0 / 10%);
+    margin          : .5em;
+    position        : fixed;
+    right           : 0;
+}
+
+.column-toggle {
+    padding: .4em;
+}
+
+.column-toggle>input[type=checkbox]+label {
+    margin-left: .2em;
 }
