--- a/src/app/record-table-view-editor/record-table-view-editor.component.html
+++ b/src/app/record-table-view-editor/record-table-view-editor.component.html
@@ -1,11 +1,8 @@
-<table>
-    <tr *ngFor="let column of recordTableService.recordTable.columns()" [hidden]="column.visible">
-        <td>
-            <input type="checkbox" [id]="column.toggleId" [checked]="column.visible"
-                (change)="column.visible = !column.visible">
-        </td>
-        <td>
-            <label [for]="column.toggleId">{{column.key}}</label>
-        </td>
-    </tr>
-</table>
+<div class="column-toggles">
+    <div class="column-toggle" *ngFor="let column of recordTableService.recordTable.columns()"
+        [hidden]="column.visible">
+        <input type="checkbox" [id]="column.toggleId" [checked]="column.visible"
+            (change)="column.visible = !column.visible">
+        <label [for]="column.toggleId">{{column.key}}</label>
+    </div>
+</div>
