--- a/src/app/record-table-view-editor/record-table-view-editor.component.html
+++ b/src/app/record-table-view-editor/record-table-view-editor.component.html
@@ -1,8 +1,5 @@
-<div class="column-toggles">
-    <div class="column-toggle" *ngFor="let column of recordTableService.recordTable.columns()"
-        [hidden]="column.visible">
-        <input type="checkbox" [id]="column.toggleId" [checked]="column.visible"
-            (change)="column.visible = !column.visible">
-        <label [for]="column.toggleId">{{column.key}}</label>
-    </div>
-</div>
+<ul *ngIf="columnRange.size">
+    <li *ngFor="let column of columnRange.get()" (click)="recordTable.toggleColumn(column)">
+        {{column.key}}
+    </li>
+</ul>
