--- a/src/app/record-table/record-table.component.css
+++ b/src/app/record-table/record-table.component.css
@@ -2,6 +2,13 @@ table {
     width: 100%;
 }
 
+thead {
+    background-color: white;
+    position        : sticky;
+    top             : 0;
+    user-select     : none;
+}
+
 td {
     max-width    : 0;
     overflow     : hidden;
