--- a/src/app/record-table-view-editor/record-table-view-editor.component.css
+++ b/src/app/record-table-view-editor/record-table-view-editor.component.css
@@ -13,6 +13,7 @@ li {
 }
 
 li {
-    list-style : none;
-    user-select: none;
+    list-style     : none;
+    text-decoration: line-through;
+    user-select    : none;
 }
