global rename: no records anymore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-record-table-view-editor></app-record-table-view-editor>
-<app-record-table></app-record-table>
+<app-table-column-toggle></app-table-column-toggle>
+<app-table></app-table>
