--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,15 +1,15 @@
 <table>
     <thead>
         <tr>
-            <th *ngFor="let column of columnRange.get()" (click)="recordTable.toggleColumn(column)">
+            <th *ngFor="let column of columnRange.get()" (click)="table.toggleColumn(column)">
                 {{column.key}}
             </th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let record of recordTable.records">
+        <tr *ngFor="let line of table.lines">
             <td *ngFor="let column of columnRange.get()">
-                {{record[column.key]}}
+                {{line[column.key]}}
             </td>
         </tr>
     </tbody>
