some box shadow

--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -9,6 +9,10 @@ thead {
     user-select     : none;
 }
 
+th:hover {
+    box-shadow: var(--box-shadow-0);
+}
+
 td {
     max-width    : 0;
     overflow     : hidden;
