--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,9 +1,24 @@
 table {
-    width: 100%;
+    table-layout: fixed;
+    width       : 100%;
 }
 
+thead {
+    position   : sticky;
+    top        : 0;
+    user-select: none;
+}
+
+th {
+    background-color: white;
+}
+
+th:hover {
+    box-shadow: var(--box-shadow-0);
+}
+
+th,
 td {
-    max-width    : 0;
     overflow     : hidden;
     text-overflow: ellipsis;
     white-space  : nowrap;
