--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,5 +1,6 @@
 table {
-    width: 100%;
+    table-layout: fixed;
+    width       : 100%;
 }
 
 thead {
@@ -10,6 +11,7 @@ thead {
 
 th {
     background-color: white;
+    max-width       : 0;
 }
 
 th:hover {
@@ -18,7 +20,6 @@ th:hover {
 
 th,
 td {
-    max-width    : 0;
     overflow     : hidden;
     text-overflow: ellipsis;
     white-space  : nowrap;
