--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -8,10 +8,12 @@
                 {{column.key}}
                 <div class="contextmenu">
                     <div (click)="column.toggle()">Toggle column</div>
-                    <div (click)="column.width = 'auto'">Width: Auto</div>
-                    <div (click)="column.width = 'fit-head'">Width: Fit head</div>
-                    <div (click)="column.width = 'fit-body'">Width: Fit body</div>
-                    <div (click)="column.width = 'fit-all'">Width: Fit all</div>
+                    <select #columnWidthSelect (change)="columnWidthSelectChangeHandler(columnWidthSelect, column)">
+                        <option>width-auto</option>
+                        <option>width-fit-head</option>
+                        <option>width-fit-body</option>
+                        <option>width-fit-all</option>
+                    </select>
                 </div>
             </th>
         </tr>
