--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -9,10 +9,10 @@
                 <div class="column-head-contextmenu">
                     <div (click)="column.toggle()">Toggle column</div>
                     <select #columnWidthSelect (change)="columnWidthSelectChangeHandler(columnWidthSelect, column)">
-                        <option>width-auto</option>
-                        <option>width-fit-head</option>
-                        <option>width-fit-body</option>
-                        <option>width-fit-all</option>
+                        <option>width--auto</option>
+                        <option>width--fit-head</option>
+                        <option>width--fit-body</option>
+                        <option>width--fit-all</option>
                     </select>
                 </div>
             </th>
