--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -28,6 +28,7 @@ th>.column-head-contextmenu {
     flex-direction  : column;
     padding         : .4em;
     position        : absolute;
+    text-align      : left;
 }
 
 th:not(:focus-within)>.column-head-contextmenu {
