--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -13,10 +13,10 @@
                 <div class="column-head-contextmenu">
                     <div (click)="column.toggle()">Hide column</div>
                     <select #columnWidthSelect (change)="columnWidthSelectChangeHandler(columnWidthSelect, column)">
-                        <option>width--auto</option>
-                        <option>width--fit-head</option>
-                        <option>width--fit-body</option>
-                        <option>width--fit-all</option>
+                        <option>column-width--auto</option>
+                        <option>column-width--fit-head</option>
+                        <option>column-width--fit-body</option>
+                        <option>column-width--fit-all</option>
                     </select>
                 </div>
             </th>
