--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -40,26 +40,14 @@ td {
     max-width: 0;
 }
 
-table.table-width--block th.column-width--fit-head,
-table.table-width--block th.column-width--fit-all,
-table.table-width--block td.column-width--fit-body,
-table.table-width--block td.column-width--fit-all,
+th.column-width--fit-head,
+td.column-width--fit-body,
+th.column-width--fit-all,
+td.column-width--fit-all,
 table.table-width--fit-head th.column-width--auto,
-table.table-width--fit-head th.column-width--fit-head,
-table.table-width--fit-head th.column-width--fit-all,
-table.table-width--fit-head td.column-width--fit-body,
-table.table-width--fit-head td.column-width--fit-all,
-table.table-width--fit-body th.column-width--fit-head,
-table.table-width--fit-body th.column-width--fit-all,
 table.table-width--fit-body td.column-width--auto,
-table.table-width--fit-body td.column-width--fit-body,
-table.table-width--fit-body td.column-width--fit-all,
 table.table-width--fit-all th.column-width--auto,
-table.table-width--fit-all th.column-width--fit-head,
-table.table-width--fit-all th.column-width--fit-all,
-table.table-width--fit-all td.column-width--auto,
-table.table-width--fit-all td.column-width--fit-body,
-table.table-width--fit-all td.column-width--fit-all {
+table.table-width--fit-all td.column-width--auto {
     min-width: fit-content;
 }
 
