--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -21,6 +21,19 @@ th:hover {
     box-shadow: var(--box-shadow-inset-border);
 }
 
+th>.column-key-container {
+    display       : flex;
+    flex-direction: column;
+}
+
+th>.column-key-container>input[type=checkbox] {
+    margin: .2em 0;
+}
+
+th:not(:hover)>.column-key-container>input[type=checkbox] {
+    visibility: hidden;
+}
+
 th>.column-head-contextmenu {
     background-color: white;
     box-shadow      : var(--box-shadow-0);
