--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -10,10 +10,12 @@
             <th *ngFor="let column of columnRecord.get()" draggable="true" tabindex="-1" [ngClass]="column.width"
                 (dragstart)="columnDragStartHandler($event, column)"
                 (dragenter)="columnDragEnterHandler($event, column)" (dragover)="columnDragOverHandler($event, column)"
-                (drop)="columnDropHandler($event, column)">
-                <div class="overflow-ellipsis">{{column.key}}</div>
+                (drop)="columnDropHandler($event, column)" (contextmenu)="$event.preventDefault()">
+                <div class="column-key-container">
+                    <input #columnVisibilityToggle type="checkbox" checked="column.visible" (click)="column.toggle()">
+                    <span class="overflow-ellipsis">{{column.key}}</span>
+                </div>
                 <div class="column-head-contextmenu">
-                    <div (click)="column.toggle()">Hide column</div>
                     <select #columnWidthSelect (change)="columnWidthSelectChangeHandler(columnWidthSelect, column)">
                         <option>column-width--auto</option>
                         <option>column-width--fit-head</option>
