column.toggle(state?)

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -12,7 +12,8 @@
                 (dragenter)="columnDragEnterHandler($event, column)" (dragover)="columnDragOverHandler($event, column)"
                 (drop)="columnDropHandler($event, column)" (contextmenu)="$event.preventDefault()">
                 <div class="column-key-container">
-                    <input #columnVisibilityToggle type="checkbox" checked="column.visible" (click)="column.toggle()">
+                    <input #columnVisibilityCheckbox type="checkbox" checked="column.visible"
+                        (click)="column.toggle(columnVisibilityCheckbox.checked)">
                     <span class="overflow-ellipsis">{{column.key}}</span>
                 </div>
                 <div class="column-head-contextmenu">
