queries and major update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<app-option-query></app-option-query>
 <app-table></app-table>
-<app-table-column-toggle></app-table-column-toggle>
+<app-statusbar></app-statusbar>
