--- a/src/app/statusbar/statusbar.component.html
+++ b/src/app/statusbar/statusbar.component.html
@@ -1,5 +1,5 @@
 <footer>
     <div *ngFor="let querySetup of querySetupRecord.get()">
-        <button type="button" (click)="queryService.prompt(querySetup)">{{querySetup.trigger.key}}</button>
+        <button type="button" (click)="queryService.prompt(querySetup)">{{querySetup.trigger.label}}</button>
     </div>
 </footer>
