--- a/src/app/statusbar/statusbar.component.css
+++ b/src/app/statusbar/statusbar.component.css
@@ -14,6 +14,7 @@ button {
     padding   : .3em;
 }
 
-button:not(:hover) {
-    opacity: .5;
+button.active,
+button:hover {
+    background-color: #353b48;
 }
